UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_SRx_Direct_Sales_Data__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <formula>DATEVALUE( Phoenix_Billing_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Direct_Rebates_IOD_BillBack_ZV87__c</fullName>
        <label>Net Direct Rebates IOD BillBack ZV87</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Accounting_Document__c</fullName>
        <label>Accounting Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Acct_Reference__c</fullName>
        <label>Acct Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Agreement_Description__c</fullName>
        <label>Agreement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Agreement_No__c</fullName>
        <label>Agreement No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Billing_Date__c</fullName>
        <label>Billing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Billing_IP_Document__c</fullName>
        <label>Billing IP Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Billing_Item_No__c</fullName>
        <label>Billing Item No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Created_On__c</fullName>
        <label>Created On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group_Number__c</fullName>
        <label>Customer Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Hierarchy_Name__c</fullName>
        <label>Customer Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Recipient_Name__c</fullName>
        <label>Customer Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Rebates__c</fullName>
        <label>Direct Rebates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Exclude_Flag__c</fullName>
        <label>Exclude Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Exclude_Reason__c</fullName>
        <label>Exclude Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Gross_Sales_With_IOD__c</fullName>
        <label>Gross Sales With IOD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Gross__c</fullName>
        <label>Gross</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Inclusion_Yes_No__c</fullName>
        <label>Inclusion (Yes/No)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net__c</fullName>
        <label>Net</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order_CR_Type__c</fullName>
        <label>Order CR Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order_Created_By__c</fullName>
        <label>Order Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order_Created_Name__c</fullName>
        <label>Order Created Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order_Reason_Code__c</fullName>
        <label>Order Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order_Reason__c</fullName>
        <label>Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_PO_CR_Reference_Number__c</fullName>
        <label>PO CR Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Package_Size__c</fullName>
        <label>Package Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Posting_Month__c</fullName>
        <label>Posting Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pricing_vs_Billing_Date__c</fullName>
        <label>Pricing vs Billing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Profic_Center__c</fullName>
        <label>Profic Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Quantity_In_Units__c</fullName>
        <label>Quantity In Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Material__c</fullName>
        <label>SAP Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_CR_Doc_Item__c</fullName>
        <label>Sales CR Doc Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_CR_Doc__c</fullName>
        <label>Sales CR Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Settlement_Doc_CC__c</fullName>
        <label>Settlement Doc CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Settlement_Doc_No__c</fullName>
        <label>Settlement Doc No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Settlement_Doc_Year__c</fullName>
        <label>Settlement Doc Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shelf_Life_Exp_Date__c</fullName>
        <label>Shelf Life Exp Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ship_To_Customer__c</fullName>
        <label>Ship To Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ship_To_Party_Zipcode__c</fullName>
        <label>Ship To Party Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sold_To_Rebate_Recipient__c</fullName>
        <label>Sold To Rebate Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZWAC__c</fullName>
        <label>ZWAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>VALUE( Phoenix_Gross__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SRx Direct Sales Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRD-{0000}</displayFormat>
        <label>SRx Direct Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SRx Direct Sales Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>